--- a/pages/showPendingApplication.html
+++ b/pages/showPendingApplication.html
@@ -64,9 +64,9 @@
                             <li>
                                 <a href="index.html"><i class="fa fa-dashboard fa-fw"></i>首页</a>
                             </li>
-                            <li>
-                                <a href="material.html"><i class="fa fa-file-archive-o fa-fw"></i>委托材料管理</a>
-                            </li>
+                            <!--<li>
+                            	<a href="material.html"><i class="fa fa-file-archive-o fa-fw"></i>委托材料管理</a>
+                            </li>-->
                             <li>
                                 <a href="#"><i class="fa fa-table fa-fw"></i>证物检验鉴定申请<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
@@ -88,6 +88,7 @@
                                 <ul class="nav nav-second-level">
                                     <li><a href="changePassword.html">修改密码</a></li>
                                     <li><a href="updateProfile.html">修改个人资料</a></li>
+                                    <li><a href="defaultValue.html">默认值设置</a></li>
                                 </ul>
                             </li>
                         </ul>
