--- a/pages/defaultValue.html
+++ b/pages/defaultValue.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>电子物证检验鉴定平台</title>
+        <title>电子物证检验鉴定受理平台</title>
 
         <!-- Bootstrap Core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
             <!-- Navigation -->
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="navbar-header">
-                    <a class="navbar-brand system-title" href="#">电子物证检验鉴定平台</a>
+                    <a class="navbar-brand system-title" href="#">电子物证检验鉴定受理平台</a>
                 </div>
 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
