--- a/pages/login.html
+++ b/pages/login.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>电子物证检验鉴定平台</title>
+        <title>电子物证检验鉴定受理平台</title>
 
         <!-- Bootstrap Core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
                 <div class="col-md-4 col-md-offset-4">
                     <div class="login-panel panel panel-default">
                         <div class="panel-heading">
-                            <h3 class="panel-title">电子物证检验鉴定平台</h3>
+                            <h3 class="panel-title">电子物证检验鉴定受理平台</h3>
                         </div>
                         <div class="panel-body">
                             <form role="form">
