--- a/pages/applicationList.html
+++ b/pages/applicationList.html
@@ -73,9 +73,9 @@
                                     <li><a href="applyIdentification.html">发起申请</a></li>
                                     <li><a href="myApplications.html">我的申请</a></li>
                                     <li><a href="showApplicationHistory.html">申请历史</a></li>
-                                    <li><a href="showPendingApplication.html" class="active">待处理申请</a></li>
+                                    <li><a href="showPendingApplication.html">待处理申请</a></li>
                                     <li><a href="showProcessedAppliation.html">已处理申请</a></li>
-									<li><a href="applicationList.html">申请一览</a></li>
+									<li><a href="applicationList.html" class="active">申请一览</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -99,14 +99,79 @@
             <div id="page-wrapper">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h3 class="page-header">待处理申请</h3>
+                        <h3 class="page-header">申请一览</h3>
                     </div>
                 </div>
+				<div class="row" id="searchCondition">
+					<div class="col-lg-12">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<i class="fa fa-table fa-fw"></i>搜索条件
+							</div>
+							<div class="panel-body">
+								<form role="form">
+									<div class="row">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>开始日期</label>
+												<div class="input-group">
+													<input type="date" class="form-control" placeholder="开始日期" id="beginDate" readonly />
+													<span class="input-group-btn">
+														<button class="btn btn-default btn-date" type="button">
+															<span class="fa fa-calendar"></span>
+														</button>
+													</span>
+												</div>
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>结束日期</label>
+												<div class="input-group">
+													<input type="date" class="form-control" placeholder="结束日期" id="endDate" readonly />
+													<span class="input-group-btn">
+														<button class="btn btn-default btn-date" type="button">
+															<span class="fa fa-calendar"></span>
+														</button>
+													</span>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>区域</label>
+												<select class="form-control">
+													<option>区A</option>
+													<option>区B</option>
+													<option>区C</option>
+													<option>区D</option>
+												</select>
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>案由</label>
+												<input type="text" class="form-control" placeholder="支持模糊查询" />
+											</div>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-6">
+											<button class="btn btn-primary">查询</button>
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
                 <div class="row" id="applicationList">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <i class="fa fa-user fa-fw"></i>待处理申请
+                                <i class="fa fa-table fa-fw"></i>申请一览
                             </div>
                             <div class="panel-body">
                                 <table class="table table-striped table-bordered table-hover">
@@ -187,74 +252,36 @@
                                     <div class="col-xs-1 bs-wizard-step complete">
                                         <div class="text-center bs-wizard-stepnum">办案警员</div>
                                         <div class="progress"><div class="progress-bar"></div></div>
-                                        <a href="#" class="bs-wizard-dot"data-toggle="modal" data-target="#approveModal"></a>
+                                        <a href="#" class="bs-wizard-dot" data-toggle="modal" data-target="#approveModal"></a>
                                         <div class="bs-wizard-info text-center"></div>
                                     </div>
                                     <div class="col-xs-3 bs-wizard-step complete"><!-- complete -->
                                         <div class="text-center bs-wizard-stepnum">办案单位</div>
                                         <div class="progress"><div class="progress-bar"></div></div>
-                                        <a href="#" class="bs-wizard-dot"data-toggle="modal" data-target="#approveModal"></a>
+                                        <a href="#" class="bs-wizard-dot" data-toggle="modal" data-target="#approveModal"></a>
                                         <div class="bs-wizard-info text-center">同意申请</div>
                                     </div>                
                                     <div class="col-xs-3 bs-wizard-step active"><!-- active -->
                                         <div class="text-center bs-wizard-stepnum">办案主管单位领导</div>
                                         <div class="progress"><div class="progress-bar"></div></div>
-                                        <a href="#" class="bs-wizard-dot"data-toggle="modal" data-target="#approveModal"></a>
+                                        <a href="#" class="bs-wizard-dot" data-toggle="modal" data-target="#approveModal"></a>
                                         <div class="bs-wizard-info text-center"></div>
                                     </div>
                                     <div class="col-xs-3 bs-wizard-step disabled"><!-- active -->
                                         <div class="text-center bs-wizard-stepnum">网安支队领导</div>
                                         <div class="progress"><div class="progress-bar"></div></div>
-                                        <a href="#" class="bs-wizard-dot"data-toggle="modal" data-target="#approveModal"></a>
+                                        <a href="#" class="bs-wizard-dot" data-toggle="modal" data-target="#approveModal"></a>
                                         <div class="bs-wizard-info text-center"></div>
                                     </div>
 									<div class="col-xs-2 bs-wizard-step disabled"><!-- active -->
 										<div class="text-center bs-wizard-stepnum">结束</div>
 										<div class="progress"><div class="progress-bar"></div></div>
-										<a href="#" class="bs-wizard-dot"data-toggle="modal" data-target="#approveModal"></a>
+										<a href="#" class="bs-wizard-dot" data-toggle="modal" data-target="#approveModal"></a>
 										<div class="bs-wizard-info text-center"></div>
 									</div>
                                 </div>
                             </div>
                         </div>
-						<div class="panel panel-danger">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-									我的意见
-								</h4>
-							</div>
-							<div class="panel-body">
-								<form role="form">
-									<div class="row">
-										<div class="col-md-2 col-sm-12">
-											<div class="form-group">
-												<label for="caseName">是否同意</label>
-												<!--<input type="text" class="form-control" id="caseName" placeholder="案由" />-->
-												<select class="form-control">
-													<option>同意</option>
-													<option>驳回修改</option>
-												</select>
-											</div>
-										</div>
-										<div class="col-md-6 col-sm-12">
-											<div class="form-group">
-												<label>附加意见</label>
-												<input type="text" class="form-control" placeholder="不同意时,请填写附加意见" />
-											</div>
-										</div>
-										<div class="col-md-4 col-md-12">
-											<div class="form-group">
-												<label>&nbsp;</label>
-												<div>
-													<button class="btn btn-default">返回</button>
-													<button class="btn btn-primary">提交</button>
-												</div>
-											</div>
-										</div>
-									</div>
-								</form>
-							</div>
-						</div>
                         <div class="panel panel-primary">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
@@ -607,7 +634,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+					<div class="table-toolbar">
+						<button class="btn btn-default" id="back">返回</button>
+					</div>
+				</div>
             </div>
         </div>
 		<!-- Approval Detail -->
@@ -653,6 +683,8 @@
 
         <!-- Bootstrap Core JavaScript -->
         <script src="../js/bootstrap.min.js"></script>
+		<script src="../js/bootstrap-datetimepicker.min.js"></script>
+		<script src="../js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
 
         <!-- Metis Menu Plugin JavaScript -->
         <script src="../js/metisMenu.min.js"></script>
@@ -660,10 +692,10 @@
         <!-- Custom Theme JavaScript -->
         <script src="../js/startmin.js"></script>
         
-        <script src="../scripts/myApplications.js"></script>
+        <script src="../scripts/applicationList.js"></script>
         <script>
             $(function() {
-                $.poa.mine.init();
+                $.poa.list.init();
             });
         </script>
     </body>
