--- a/pages/applyIdentification.html
+++ b/pages/applyIdentification.html
@@ -26,7 +26,7 @@
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
         <script src="../js/html5shiv.js"></script>
-        <script src="../respond.js/1.4.2/respond.min.js"></script>
+        <script src="../js/respond.min.js"></script>
         <![endif]-->
     </head>
     <body>
@@ -79,6 +79,7 @@
                                     <li><a href="showApplicationHistory.html">申请历史</a></li>
                                     <li><a href="showPendingApplication.html">待处理申请</a></li>
                                     <li><a href="showProcessedAppliation.html">已处理申请</a></li>
+									<li><a href="applicationList.html">申请一览</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -322,6 +323,7 @@
 													<th>文件种类</th>
 													<th>文件名称</th>
 													<th>数量</th>
+													<th>图片链接</th>
 													<th>备注（文号等说明）</th>
 												</tr>
 											</thead>
@@ -331,6 +333,7 @@
 													<td>受理/立案决定<br/>法律文书</td>
 													<td><select class="form-control" size="4" multiple></select></td>
 													<td><select class="form-control" size="4" multiple></select></td>
+													<td></td>
 													<td><select class="form-control" size="4" multiple></select></td>
 												</tr>
 												<tr>
@@ -338,6 +341,7 @@
 													<td>检材来源<br />法律文书</td>
 													<td><select class="form-control" size="4" multiple></select></td>
 													<td><select class="form-control" size="4" multiple></select></td>
+													<td></td>
 													<td><select class="form-control" size="4" multiple></select></td>
 												</tr>
 												<tr>
@@ -345,6 +349,7 @@
 													<td>其他（参考材料）</td>
 													<td><select class="form-control" size="4" multiple></select></td>
 													<td><select class="form-control" size="4" multiple></select></td>
+													<td></td>
 													<td><select class="form-control" size="4" multiple></select></td>
 												</tr>
 											</tbody>
@@ -368,6 +373,7 @@
 													<th>序号</th>
 													<th>检材种类</th>
 													<th>数量</th>
+													<th>图片链接</th>
 													<th>特征描述及外部异常状态描述</th>
 												</tr>
 											</thead>
@@ -377,6 +383,7 @@
 													<td>1</td>
 													<td>台式主机</td>
 													<td>1套</td>
+													<td><a target="_blank" href="../img/test.jpg">证物-20170902-001</a></td>
 													<td>&nbsp;</td>
 												</tr>
 												<tr>
@@ -384,6 +391,7 @@
 													<td>2</td>
 													<td>硬盘</td>
 													<td>1件</td>
+													<td><a target="_blank" href="../img/test.jpg">证物-20170902-003</a></td>
 													<td>表面积满灰尘</td>
 												</tr>
 												<tr>
@@ -391,6 +399,7 @@
 													<td>3</td>
 													<td>多媒体存储卡</td>
 													<td>2件</td>
+													<td><a target="_blank" href="../img/test.jpg">证物-20170902-004</a></td>
 													<td>表面有划痕</td>
 												</tr>
 												<tr>
@@ -398,6 +407,7 @@
 													<td>4</td>
 													<td>笔记本电脑</td>
 													<td>3套</td>
+													<td><a target="_blank" href="../img/test.jpg">证物-20170902-009</a></td>
 													<td>外观完好</td>
 												</tr>
 											</tbody>
@@ -462,6 +472,12 @@
 								</select>
 							</div>
 							<div class="form-group">
+								<label class="btn btn-default btn-file">
+									上传文件<input type="file" class="uploadFile" style="display: none;" />
+								</label>
+								<span></span>
+							</div>
+							<div class="form-group">
 								<label>特征描述及外部异常状态描述</label>
 								<textarea class="form-control" rows="4"></textarea>
 							</div>
@@ -521,6 +537,12 @@
 								</select>
 							</div>
 							<div class="form-group">
+								<label class="btn btn-default btn-file">
+									上传文件<input type="file" class="uploadFile" style="display: none;" />
+								</label>
+								<span>testFile.png</span>
+							</div>
+							<div class="form-group">
 								<label>特征描述及外部异常状态描述</label>
 								<textarea class="form-control" rows="4">外观完好，其中一张表面潮湿。</textarea>
 							</div>
@@ -567,6 +589,12 @@
 									<option>件</option>
 									<option>套</option>
 								</select>
+							</div>
+							<div class="form-group">
+								<label class="btn btn-default btn-file">
+									上传文件<input type="file" class="uploadFile" style="display: none;" />
+								</label>
+								<span></span>
 							</div>
 							<div class="form-group">
 								<label>备注</label>
