--- a/pages/login.html
+++ b/pages/login.html
@@ -28,7 +28,7 @@
         <script src="../js/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body>
+    <body class="login-back">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-8">
@@ -45,7 +45,6 @@
                                     <div class="form-group">
                                         <input class="form-control" placeholder="密码" name="password" type="password" value="">
                                     </div>
-                                    <!-- Change this to a button or input when using this as a form -->
                                     <a href="index.html" class="btn btn-lg btn-success btn-block">登陆</a>
                                 </fieldset>
                             </form>
