--- a/pages/updateProfile.html
+++ b/pages/updateProfile.html
@@ -84,6 +84,7 @@
                                     <li><a href="showApplicationHistory.html">申请历史</a></li>
                                     <li><a href="showPendingApplication.html">待处理申请</a></li>
                                     <li><a href="showProcessedAppliation.html">已处理申请</a></li>
+									<li><a href="applicationList.html">申请一览</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -115,21 +116,27 @@
 					<div class="col-lg-12">
 						<form role="form" class="form-horizontal">
 							<div class="form-group">
-								<label for="userID" class="control-label col-sm-1">用户ID</label>
+								<label for="userID" class="control-label col-sm-1">警号</label>
 								<div class="col-sm-11">
-									<input type="text" class="form-control" id="userID" value="User001" readonly />
+									<input type="text" class="form-control" id="userID" value="972345" readonly />
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="userName" class="control-label col-sm-1">用户名</label>
+								<label for="userName" class="control-label col-sm-1">姓名</label>
 								<div class="col-sm-11">
-									<input type="text" class="form-control" id="userName" placeholder="请输入用户名" value="用户001" />
+									<input type="text" class="form-control" id="userName" placeholder="请输入用户名" value="王五" />
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="eMail" class="control-label col-sm-1">e-Mail</label>
+								<label for="phone" class="control-label col-sm-1">电话号码</label>
 								<div class="col-sm-11">
-									<input type="email" class="form-control" id="eMail" placeholder="请输入e-Mail" value="user001@test.org" />
+									<input type="text" class="form-control" id="phone" placeholder="请输入电话号码" value="12345678901" />
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="addr" class="control-label col-sm-1">所属单位</label>
+								<div class="col-sm-11">
+									<input type="text" class="form-control" id="addr" placeholder="请输入所属单位" value="XXXXXXXXX" />
 								</div>
 							</div>
 							<div class="form-group">
