--- a/pages/users.html
+++ b/pages/users.html
@@ -84,6 +84,7 @@
                                     <li><a href="showApplicationHistory.html">申请历史</a></li>
                                     <li><a href="showPendingApplication.html">待处理申请</a></li>
                                     <li><a href="showProcessedAppliation.html">已处理申请</a></li>
+									<li><a href="applicationList.html">申请一览</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -129,45 +130,45 @@
 										<thead>
                                             <tr>
                                                 <th class="selection-col">&nbsp;</th>
-                                                <th>用户ID</th>
-												<th>用户名</th>
+                                                <th>警号</th>
+												<th>姓名</th>
                                             </tr>
                                         </thead>
 										<tbody>
                                             <tr>
                                                 <td class="selection-col"><input type="checkbox" /></td>
-                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User001</a></td>
-												<td>用户001</td>
+                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">092384</a></td>
+												<td>张三</td>
                                             </tr>
                                             <tr>
                                                 <td class="selection-col"><input type="checkbox" /></td>
-                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User002</a></td>
-												<td>用户002</td>
+                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">092385</a></td>
+												<td>李四</td>
                                             </tr>
                                             <tr>
                                                 <td class="selection-col"><input type="checkbox" /></td>
-                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User003</a></td>
-												<td>用户003</td>
+                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">092386</a></td>
+												<td>王五</td>
                                             </tr>
 											<tr>
                                                 <td class="selection-col"><input type="checkbox" /></td>
-                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User004</a></td>
-												<td>用户004</td>
+                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">092387</a></td>
+												<td>朱八</td>
                                             </tr>
 											<tr>
                                                 <td class="selection-col"><input type="checkbox" /></td>
-                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User005</a></td>
-												<td>用户005</td>
+                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">092388</a></td>
+												<td>赵一</td>
                                             </tr>
 											<tr>
                                                 <td class="selection-col"><input type="checkbox" /></td>
-                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User006</a></td>
-												<td>用户006</td>
+                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">092389</a></td>
+												<td>钱七</td>
                                             </tr>
 											<tr>
                                                 <td class="selection-col"><input type="checkbox" /></td>
-                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User007</a></td>
-												<td>用户007</td>
+                                                <td><a href="#" data-toggle="modal" data-target="#updateUserModal">092390</a></td>
+												<td>孙二</td>
                                             </tr>
                                         </tbody>
 									</table>
@@ -196,16 +197,20 @@
 					<div class="modal-body">
 						<form role="form">
 							<div class="form-group">
-								<label for="userID">用户ID</label>
-								<input type="text" class="form-control" id="userID" placeholder="请输入用户ID">
+								<label for="userID">警号</label>
+								<input type="text" class="form-control" id="userID" placeholder="请输入警号">
 							</div>
 							<div class="form-group">
-								<label for="userName">用户名</label>
-								<input type="text" class="form-control" id="userName" placeholder="请输入用户名">
+								<label for="userName">姓名</label>
+								<input type="text" class="form-control" id="userName" placeholder="请输入姓名">
 							</div>
 							<div class="form-group">
-								<label for="eMail">e-Mail</label>
-                                <input type="text" class="form-control" id="eMail" placeholder="请输入e-Mail">
+								<label for="phone">电话</label>
+                                <input type="text" class="form-control" id="eMail" placeholder="请输入电话号码">
+							</div>
+							<div class="form-group">
+								<label for="phone">所属单位</label>
+								<input type="text" class="form-control" id="eMail" placeholder="请输入所属单位">
 							</div>
 						</form>
 					</div>
@@ -232,16 +237,20 @@
 					<div class="modal-body">
 						<form role="form">
 							<div class="form-group">
-								<label for="userID">用户ID</label>
-								<input type="text" class="form-control" id="userID" value="User001" readonly>
+								<label for="userID">警号</label>
+								<input type="text" class="form-control" id="userID" placeholder="请输入警号" value="092384">
 							</div>
 							<div class="form-group">
-								<label for="userName">用户名</label>
-								<input type="text" class="form-control" id="userName" placeholder="请输入用户名" value="用户001">
+								<label for="userName">姓名</label>
+								<input type="text" class="form-control" id="userName" placeholder="请输入姓名" value="张三">
 							</div>
 							<div class="form-group">
-								<label for="eMail">e-Mail</label>
-                                <input type="text" class="form-control" id="eMail" placeholder="请输入e-Mail" value="user001@test.org">
+								<label for="phone">电话</label>
+								<input type="text" class="form-control" id="eMail" placeholder="请输入电话号码" value="12345678901">
+							</div>
+							<div class="form-group">
+								<label for="phone">所属单位</label>
+								<input type="text" class="form-control" id="eMail" placeholder="请输入所属单位" value="A市B区C大队">
 							</div>
 						</form>
 					</div>
