--- a/pages/login.html
+++ b/pages/login.html
@@ -29,12 +29,16 @@
         <![endif]-->
     </head>
     <body class="login-back">
+		<div style="text-align:center; font-size:60pt; font-weight:900; color:#0044CC; margin-top:200px;height:400px;text-shadow:1px 1px 0px white,-1px -1px 0px black;">电子物证检验鉴定受理平台</div>
+		<div style="position:absolute; top:300px; left:240px;width:40px;font-size:40pt; font-weight:900; color:red; margin-top:40px;height:400px;text-shadow:1px 1px 0px white,-1px -1px 0px black;">秒级响应<br/><br/>立刻就办</div>
+		<div style="position:absolute; top:300px; right:240px;width:40px;font-size:40pt; font-weight:900; color:red; margin-top:40px;height:400px;text-shadow:1px 1px 0px white,-1px -1px 0px black;">跟踪问效<br/><br/>严防疏漏</div>
+		<div style="position:absolute; bottom:20px; left:350px; tex-align: center; font-size:25pt; font-weight:900; color:#0044CC; margin-top:40px;text-shadow:1px 1px 0px white,-1px -1px 0px black;">安徽溯源电子科技有限公司</div>
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-md-offset-8">
+                <div class="col-md-4 col-md-offset-4">
                     <div class="login-panel panel panel-default">
                         <div class="panel-heading">
-                            <h3 class="panel-title">电子物证检验鉴定受理平台</h3>
+                            <h3 class="panel-title">用户登陆</h3>
                         </div>
                         <div class="panel-body">
                             <form role="form">
