--- a/pages/applyIdentification.html
+++ b/pages/applyIdentification.html
@@ -323,7 +323,6 @@
 													<th>文件种类</th>
 													<th>文件名称</th>
 													<th>数量</th>
-													<th>图片链接</th>
 													<th>备注（文号等说明）</th>
 												</tr>
 											</thead>
@@ -331,26 +330,77 @@
 												<tr>
 													<td>1</td>
 													<td>受理/立案决定<br/>法律文书</td>
-													<td><select class="form-control" size="4" multiple></select></td>
-													<td><select class="form-control" size="4" multiple></select></td>
-													<td></td>
-													<td><select class="form-control" size="4" multiple></select></td>
+													<td>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/受理立案决定法律文书.docx">受理/立案决定法律文书-001</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/受理立案决定法律文书.docx">受理/立案决定法律文书-002</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/受理立案决定法律文书.docx">受理/立案决定法律文书-003</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/受理立案决定法律文书.docx">受理/立案决定法律文书-004</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/受理立案决定法律文书.docx">受理/立案决定法律文书-005</a></div>
+													</td>
+													<td>
+														<div>1页</div>
+														<div>3套</div>
+														<div>5件</div>
+														<div>2页</div>
+														<div>4件</div>
+													</td>
+													<td>
+														<div>&nbsp;</div>
+														<div>无</div>
+														<div>文件描述</div>
+														<div>...</div>
+														<div>没有备注</div>
+													</td>
 												</tr>
 												<tr>
 													<td>2</td>
 													<td>检材来源<br />法律文书</td>
-													<td><select class="form-control" size="4" multiple></select></td>
-													<td><select class="form-control" size="4" multiple></select></td>
-													<td></td>
-													<td><select class="form-control" size="4" multiple></select></td>
+													<td>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/检材来源法律文书.docx">检材来源法律文书-001</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/检材来源法律文书.docx">检材来源法律文书-002</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/检材来源法律文书.docx">检材来源法律文书-003</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/检材来源法律文书.docx">检材来源法律文书-004</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/检材来源法律文书.docx">检材来源法律文书-005</a></div>
+													</td>
+													<td>
+														<div>1页</div>
+														<div>2套</div>
+														<div>3件</div>
+														<div>4页</div>
+														<div>5件</div>
+													</td>
+													<td>
+														<div></div>
+														<div></div>
+														<div></div>
+														<div></div>
+														<div></div>
+													</td>
 												</tr>
 												<tr>
 													<td>3</td>
 													<td>其他（参考材料）</td>
-													<td><select class="form-control" size="4" multiple></select></td>
-													<td><select class="form-control" size="4" multiple></select></td>
-													<td></td>
-													<td><select class="form-control" size="4" multiple></select></td>
+													<td>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/其他.docx">其他-001</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/其他.docx">其他-002</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/其他.docx">其他-003</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/其他.docx">其他-004</a></div>
+														<div><input type="checkbox" />&nbsp;<a href="../docs/其他.docx">其他-005</a></div>
+													</td>
+													<td>
+														<div>1页</div>
+														<div>2套</div>
+														<div>3件</div>
+														<div>4页</div>
+														<div>5件</div>
+													</td>
+													<td>
+														<div>&nbsp;</div>
+														<div>xxxxxxx</div>
+														<div>&nbsp;</div>
+														<div>yyyyyyy</div>
+														<div>zzzzzzz</div>
+													</td>
 												</tr>
 											</tbody>
 										</table>
