--- a/pages/showPendingApplication.html
+++ b/pages/showPendingApplication.html
@@ -473,87 +473,75 @@
                                                 		<td>1</td>
                                                 		<td>受理/立案决定<br/>法律文书</td>
                                                 		<td>
-                                                			<select class="form-control fileSelect" size="4" multiple disabled>
-                                                				<option>受理/立案决定法律文书-1</option>
-                                                				<option>受理/立案决定法律文书-2</option>
-                                                				<option>受理/立案决定法律文书-3</option>
-                                                				<option>受理/立案决定法律文书-4</option>
-                                                				<option>受理/立案决定法律文书-5</option>
-                                                				<option>受理/立案决定法律文书-6</option>
-                                                			</select>
+                                                			<div><a href="../docs/受理立案决定法律文书.docx">受理/立案决定法律文书-001</a></div>
+                                                			<div><a href="../docs/受理立案决定法律文书.docx">受理/立案决定法律文书-002</a></div>
+                                                			<div><a href="../docs/受理立案决定法律文书.docx">受理/立案决定法律文书-003</a></div>
+                                                			<div><a href="../docs/受理立案决定法律文书.docx">受理/立案决定法律文书-004</a></div>
+                                                			<div><a href="../docs/受理立案决定法律文书.docx">受理/立案决定法律文书-005</a></div>
                                                 		</td>
                                                 		<td>
-                                                			<select class="form-control fileSelect" size="4" multiple disabled>
-                                                				<option>3页</option>
-                                                				<option>5件</option>
-                                                				<option>2套</option>
-                                                				<option>9页</option>
-                                                				<option>5件</option>
-                                                				<option>2套</option>
-                                                			</select>
+                                                			<div>1页</div>
+                                                			<div>3套</div>
+                                                			<div>5件</div>
+                                                			<div>2页</div>
+                                                			<div>4件</div>
                                                 		</td>
                                                 		<td>
-                                                			<select class="form-control fileSelect" size="4" multiple disabled>
-                                                				<option>备注文本备注文本备注文本-1</option>
-                                                				<option>无</option>
-                                                				<option>&nbsp;</option>
-                                                				<option>&nbsp;</option>
-                                                				<option>无</option>
-                                                				<option>&nbsp;</option>
-                                                			</select>
+                                                			<div>&nbsp;</div>
+                                                			<div>无</div>
+                                                			<div>文件描述</div>
+                                                			<div>...</div>
+                                                			<div>没有备注</div>
                                                 		</td>
                                                 	</tr>
                                                 	<tr>
                                                 		<td>2</td>
                                                 		<td>检材来源<br />法律文书</td>
                                                 		<td>
-                                                			<select class="form-control fileSelect" size="4" multiple disabled>
-                                                				<option>检材来源法律文书-1</option>
-                                                				<option>检材来源法律文书-2</option>
-                                                				<option>检材来源法律文书-3</option>
-                                                				<option>检材来源法律文书-4</option>
-                                                			</select>
+                                                			<div><a href="../docs/检材来源法律文书.docx">检材来源法律文书-001</a></div>
+                                                			<div><a href="../docs/检材来源法律文书.docx">检材来源法律文书-002</a></div>
+                                                			<div><a href="../docs/检材来源法律文书.docx">检材来源法律文书-003</a></div>
+                                                			<div><a href="../docs/检材来源法律文书.docx">检材来源法律文书-004</a></div>
+                                                			<div><a href="../docs/检材来源法律文书.docx">检材来源法律文书-005</a></div>
                                                 		</td>
                                                 		<td>
-                                                			<select class="form-control fileSelect" size="4" multiple disabled>
-                                                				<option>3页</option>
-                                                				<option>5件</option>
-                                                				<option>2套</option>
-                                                				<option>9页</option>
-                                                			</select>
+                                                			<div>1页</div>
+                                                			<div>2套</div>
+                                                			<div>3件</div>
+                                                			<div>4页</div>
+                                                			<div>5件</div>
                                                 		</td>
                                                 		<td>
-                                                			<select class="form-control fileSelect" size="4" multiple disabled>
-                                                				<option>备注文本备注文本备注文本-1</option>
-                                                				<option>无</option>
-                                                				<option>无</option>
-                                                				<option>&nbsp;</option>
-                                                			</select>
+                                                			<div></div>
+                                                			<div></div>
+                                                			<div></div>
+                                                			<div></div>
+                                                			<div></div>
                                                 		</td>
                                                 	</tr>
                                                 	<tr>
                                                 		<td>3</td>
                                                 		<td>其他（参考材料）</td>
                                                 		<td>
-                                                			<select class="form-control fileSelect" size="4" multiple disabled>
-                                                				<option>其他（参考材料）-1</option>
-                                                				<option>其他（参考材料）-2</option>
-                                                				<option>其他（参考材料）-3</option>
-                                                			</select>
+                                                			<div><a href="../docs/其他.docx">其他-001</a></div>
+                                                			<div><a href="../docs/其他.docx">其他-002</a></div>
+                                                			<div><a href="../docs/其他.docx">其他-003</a></div>
+                                                			<div><a href="../docs/其他.docx">其他-004</a></div>
+                                                			<div><a href="../docs/其他.docx">其他-005</a></div>
                                                 		</td>
                                                 		<td>
-                                                			<select class="form-control fileSelect" size="4" multiple disabled>
-                                                				<option>3页</option>
-                                                				<option>5件</option>
-                                                				<option>2套</option
-                                                			</select>
+                                                			<div>1页</div>
+                                                			<div>2套</div>
+                                                			<div>3件</div>
+                                                			<div>4页</div>
+                                                			<div>5件</div>
                                                 		</td>
                                                 		<td>
-                                                			<select class="form-control fileSelect" size="4" multiple disabled>
-                                                				<option>备注文本备注文本备注文本-1</option>
-                                                				<option>无</option>
-                                                				<option>&nbsp;</option>
-                                                			</select>
+                                                			<div>&nbsp;</div>
+                                                			<div>xxxxxxx</div>
+                                                			<div>&nbsp;</div>
+                                                			<div>yyyyyyy</div>
+                                                			<div>zzzzzzz</div>
                                                 		</td>
                                                 	</tr>
                                                 </tbody>
@@ -567,38 +555,48 @@
                                         <div class="panel-body">
                                             <table class="table table-bordered table-hover">
                                                 <thead>
-                                                    <tr>
-                                                        <th>序号</th>
-                                                        <th>检材种类</th>
-                                                        <th>数量</th>
-                                                        <th>特征描述及外部异常状态描述</th>
-                                                    </tr>
+                                                	<tr>
+                                                		<th class="selection-col">&nbsp;</th>
+                                                		<th>序号</th>
+                                                		<th>检材种类</th>
+                                                		<th>数量</th>
+                                                		<th>图片链接</th>
+                                                		<th>特征描述及外部异常状态描述</th>
+                                                	</tr>
                                                 </thead>
                                                 <tbody>
-                                                    <tr>
-                                                        <td>1</td>
-                                                        <td>台式主机</td>
-                                                        <td>1套</td>
-                                                        <td>&nbsp;</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>2</td>
-                                                        <td>硬盘</td>
-                                                        <td>1件</td>
-                                                        <td>表面积满灰尘</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>3</td>
-                                                        <td>多媒体存储卡</td>
-                                                        <td>2件</td>
-                                                        <td>表面有划痕</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>4</td>
-                                                        <td>笔记本电脑</td>
-                                                        <td>3套</td>
-                                                        <td>外观完好</td>
-                                                    </tr>
+                                                	<tr>
+                                                		<td class="selection-col"><input type="checkbox" /></td>
+                                                		<td>1</td>
+                                                		<td>台式主机</td>
+                                                		<td>1套</td>
+                                                		<td><a target="_blank" href="../img/test.jpg">证物-20170902-001</a></td>
+                                                		<td>&nbsp;</td>
+                                                	</tr>
+                                                	<tr>
+                                                		<td class="selection-col"><input type="checkbox" /></td>
+                                                		<td>2</td>
+                                                		<td>硬盘</td>
+                                                		<td>1件</td>
+                                                		<td><a target="_blank" href="../img/test.jpg">证物-20170902-003</a></td>
+                                                		<td>表面积满灰尘</td>
+                                                	</tr>
+                                                	<tr>
+                                                		<td class="selection-col"><input type="checkbox" /></td>
+                                                		<td>3</td>
+                                                		<td>多媒体存储卡</td>
+                                                		<td>2件</td>
+                                                		<td><a target="_blank" href="../img/test.jpg">证物-20170902-004</a></td>
+                                                		<td>表面有划痕</td>
+                                                	</tr>
+                                                	<tr>
+                                                		<td class="selection-col"><input type="checkbox" /></td>
+                                                		<td>4</td>
+                                                		<td>笔记本电脑</td>
+                                                		<td>3套</td>
+                                                		<td><a target="_blank" href="../img/test.jpg">证物-20170902-009</a></td>
+                                                		<td>外观完好</td>
+                                                	</tr>
                                                 </tbody>
                                             </table>
                                         </div>
