--- a/pages/users.html
+++ b/pages/users.html
@@ -26,6 +26,9 @@
 
         <!-- Custom Fonts -->
         <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
+		
+		<!-- zTree -->
+		<link href="../css/zTree_v3/css/metroStyle/metroStyle.css" rel="stylesheet" type="text/css">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -113,11 +116,43 @@
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
+				<div class="row" id="searchCondition">
+					<div class="col-lg-12">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<i class="fa fa-table fa-fw"></i>查询条件
+							</div>
+							<div class="panel-body">
+								<form role="form">
+									<div class="row">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>所属单位</label>
+												<input type="text" class="form-control" placeholder="支持模糊查询" />
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>姓名</label>
+												<input type="text" class="form-control" placeholder="支持模糊查询" />
+											</div>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-6">
+											<button class="btn btn-primary">查询</button>
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="panel panel-default">
                             <div class="panel-heading">
-                                <i class="fa fa-user fa-fw"></i>用户管理
+                                <i class="fa fa-user fa-fw"></i>用户一览
                             </div>
                             <div class="panel-body">
 									<div class="table-toolbar">
@@ -210,13 +245,47 @@
 							</div>
 							<div class="form-group">
 								<label for="phone">所属单位</label>
-								<input type="text" class="form-control" id="eMail" placeholder="请输入所属单位">
+								<div class="input-group">
+									<input type="text" class="form-control" id="dept" readonly>
+									<span class="input-group-btn">
+										<button class="btn btn-default btn-date" type="button" data-toggle="modal" data-target="#selectDeptModal">
+											<span class="fa fa-building"></span>
+										</button>
+									</span>
+								</div>
 							</div>
 						</form>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
 						<button type="button" class="btn btn-primary" data-dismiss="modal">保存</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal -->
+		</div>
+		
+		<!-- select dept -->
+		<div class="modal fade" id="selectDeptModal" tabindex="-1" role="dialog" aria-labelledby="selectDeptModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+							<span class="fa fa-times"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">
+							选择组织
+						</h4>
+					</div>
+					<div class="modal-body">
+						<form role="form">
+							<div class="form-group">
+								<ul id="deptTree" class="ztree"></ul>
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+						<button type="button" class="btn btn-primary" data-dismiss="modal">选择</button>
 					</div>
 				</div><!-- /.modal-content -->
 			</div><!-- /.modal -->
@@ -274,6 +343,18 @@
 
         <!-- Custom Theme JavaScript -->
         <script src="../js/startmin.js"></script>
+		
+		<!-- zTree -->
+		<script src="../js/zTree_v3/js/jquery.ztree.core.js"></script>
+		<script src="../js/zTree_v3/js/jquery.ztree.excheck.js"></script>
+		<script src="../js/zTree_v3/js/jquery.ztree.exedit.js"></script>
+		
+		<script src="../scripts/users.js"></script>
+		<script>
+			$(function() {
+				$.poa.users.init();
+			});
+		</script>
 		
     </body>
 </html>
