--- a/static/pages/applicationList.html
+++ b/static/pages/applicationList.html
@@ -78,6 +78,9 @@
 									<li><a href="applicationList.html" class="active">申请一览</a></li>
                                 </ul>
                             </li>
+							<li>
+								<a href="departments.html"><i class="fa fa-user fa-fw"></i>组织管理</a>
+							</li>
                             <li>
                                 <a href="users.html"><i class="fa fa-user fa-fw"></i>用户管理</a>
                             </li>
