--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -68,7 +68,7 @@
                                 <a href="index.html" class="active"><i class="fa fa-dashboard fa-fw"></i>首页</a>
                             </li>
                             <!--<li>
-                            	<a href="material.html"><i class="fa fa-file-archive-o fa-fw"></i>委托材料管理</a>
+                                <a href="material.html"><i class="fa fa-file-archive-o fa-fw"></i>委托材料管理</a>
                             </li>-->
                             <li>
                                 <a href="#"><i class="fa fa-table fa-fw"></i>证物检验鉴定申请<span class="fa arrow"></span></a>
@@ -78,9 +78,12 @@
                                     <li><a href="showApplicationHistory.html">申请历史</a></li>
                                     <li><a href="showPendingApplication.html">待处理申请</a></li>
                                     <li><a href="showProcessedAppliation.html">已处理申请</a></li>
-									<li><a href="applicationList.html">申请一览</a></li>
+                                    <li><a href="applicationList.html">申请一览</a></li>
                                 </ul>
                             </li>
+							<li>
+								<a href="departments.html"><i class="fa fa-building fa-fw"></i>组织管理</a>
+							</li>
                             <li>
                                 <a href="users.html"><i class="fa fa-user fa-fw"></i>用户管理</a>
                             </li>
