--- a/static/pages/applicationList.html
+++ b/static/pages/applicationList.html
@@ -84,6 +84,9 @@
                             <li>
                                 <a href="users.html"><i class="fa fa-user fa-fw"></i>用户管理</a>
                             </li>
+							<li>
+								<a href="codes.html"><i class="fa fa-code-fork fa-fw"></i>模块管理</a>
+							</li>
                             <li>
                                 <a href="statistics.html"><i class="fa fa-bar-chart fa-fw"></i>统计分析</a>
                             </li>
