--- a/static/pages/updateProfile.html
+++ b/static/pages/updateProfile.html
@@ -93,6 +93,9 @@
                             <li>
                                 <a href="users.html"><i class="fa fa-user fa-fw"></i>用户管理</a>
                             </li>
+							<li>
+								<a href="codes.html"><i class="fa fa-code-fork fa-fw"></i>模块管理</a>
+							</li>
                             <li>
                                 <a href="statistics.html"><i class="fa fa-bar-chart fa-fw"></i>统计分析</a>
                             </li>
@@ -117,36 +120,26 @@
                 </div>
 				<div class="row">
 					<div class="col-lg-12">
-						<form role="form" class="form-horizontal">
+						<form role="form">
 							<div class="form-group">
-								<label for="userID" class="control-label col-sm-1">警号</label>
-								<div class="col-sm-11">
-									<input type="text" class="form-control" id="userID" value="972345" readonly />
-								</div>
+								<label for="userID">警号</label>
+								<input type="text" class="form-control" id="userID" value="972345" readonly />
 							</div>
 							<div class="form-group">
-								<label for="userName" class="control-label col-sm-1">姓名</label>
-								<div class="col-sm-11">
-									<input type="text" class="form-control" id="userName" placeholder="请输入用户名" value="王五" />
-								</div>
+								<label for="userName">姓名</label>
+								<input type="text" class="form-control" id="userName" placeholder="请输入用户名" value="王五" />
 							</div>
 							<div class="form-group">
-								<label for="phone" class="control-label col-sm-1">电话号码</label>
-								<div class="col-sm-11">
-									<input type="text" class="form-control" id="phone" placeholder="请输入电话号码" value="12345678901" />
-								</div>
+								<label for="phone">电话号码</label>
+								<input type="text" class="form-control" id="phone" placeholder="请输入电话号码" value="12345678901" />
 							</div>
 							<div class="form-group">
-								<label for="addr" class="control-label col-sm-1">所属单位</label>
-								<div class="col-sm-11">
-									<input type="text" class="form-control" id="addr" placeholder="请输入所属单位" value="XXXXXXXXX" />
-								</div>
+								<label for="addr">所属单位</label>
+								<input type="text" class="form-control" id="addr" placeholder="请输入所属单位" value="XXXXXXXXX" />
 							</div>
 							<div class="form-group">
-								<div class="col-sm-offset-1 col-sm-11">
-									<button type="reset" class="btn btn-default">重置</button>
-									<button type="submit" class="btn btn-primary">保存</button>
-								</div>
+								<button type="reset" class="btn btn-default">重置</button>
+								<button type="submit" class="btn btn-primary">保存</button>
 							</div>
 						</form>
 					</div>
