--- a/static/pages/changePassword.html
+++ b/static/pages/changePassword.html
@@ -93,6 +93,9 @@
                             <li>
                                 <a href="users.html"><i class="fa fa-user fa-fw"></i>用户管理</a>
                             </li>
+							<li>
+								<a href="codes.html"><i class="fa fa-code-fork fa-fw"></i>模块管理</a>
+							</li>
                             <li>
                                 <a href="statistics.html"><i class="fa fa-bar-chart fa-fw"></i>统计分析</a>
                             </li>
@@ -117,30 +120,22 @@
                 </div>
 				<div class="row">
 					<div class="col-lg-12">
-						<form role="form" class="form-horizontal">
+						<form role="form">
 							<div class="form-group">
-								<label for="userID" class="col-sm-1 control-label">旧密码</label>
-								<div class="col-sm-5">
-									<input type="password" class="form-control" id="oldPassword" placeholder="旧密码" />
-								</div>
+								<label>旧密码</label>
+								<input type="password" class="form-control" id="oldPassword" placeholder="旧密码" />
 							</div>
 							<div class="form-group">
-								<label for="userName" class="col-sm-1 control-label">新密码</label>
-								<div class="col-sm-5">
-									<input type="password" class="form-control" id="newPassword" placeholder="新密码" />
-								</div>
+								<label>新密码</label>
+								<input type="password" class="form-control" id="newPassword" placeholder="新密码" />
 							</div>
 							<div class="form-group">
-								<label for="eMail" class="col-sm-1 control-label">新密码确认</label>
-								<div class="col-sm-5">
-									<input type="password" class="form-control" id="newPasswordConfirm" placeholder="新密码" />
-								</div>
+								<label>新密码确认</label>
+								<input type="password" class="form-control" id="newPasswordConfirm" placeholder="新密码" />
 							</div>
 							<div class="form-group">
-								<div class="col-sm-offset-1 col-sm-5">
-									<button type="reset" class="btn btn-default">重置</button>
-									<button type="submit" class="btn btn-primary">保存</button>
-								</div>
+								<button type="reset" class="btn btn-default">重置</button>
+								<button type="submit" class="btn btn-primary">保存</button>
 							</div>
 						</form>
 					</div>
