--- a/static/pages/codes.html
+++ b/static/pages/codes.html
@@ -21,9 +21,6 @@
 
         <!-- Custom Fonts -->
         <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
-		
-		<!-- zTree -->
-		<link href="../css/zTree_v3/css/metroStyle/metroStyle.css" rel="stylesheet" type="text/css">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -86,13 +83,13 @@
                                 </ul>
                             </li>
 							<li>
-								<a href="departments.html" class="active"><i class="fa fa-building fa-fw"></i>组织管理</a>
+								<a href="departments.html"><i class="fa fa-building fa-fw"></i>组织管理</a>
 							</li>
                             <li>
                                 <a href="users.html"><i class="fa fa-user fa-fw"></i>用户管理</a>
                             </li>
 							<li>
-								<a href="codes.html"><i class="fa fa-code-fork fa-fw"></i>模块管理</a>
+								<a href="codes.html" class="active"><i class="fa fa-code-fork fa-fw"></i>模块管理</a>
 							</li>
                             <li>
                                 <a href="statistics.html"><i class="fa fa-bar-chart fa-fw"></i>统计分析</a>
@@ -112,22 +109,111 @@
 			<div id="page-wrapper">
 				<div class="row">
 					<div class="col-lg-12">
-						<h3 class="page-header">组织管理</h3>
+						<h3 class="page-header">模块管理</h3>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="panel panel-default">
 							<div class="panel-heading">
-								<i class="fa fa-building fa-fw"></i>组织树
+								<i class="fa fa-table fa-fw"></i>查询条件
 							</div>
 							<div class="panel-body">
-								<div class="table-toolbar">
-									<button type="button" class="btn btn-default" data-toggle="modal" data-target="#addDeptModal">添加</button>
-									<button type="button" class="btn btn-default">编辑</button>
-									<button type="button" class="btn btn-default">删除</button>
-								</div>
-								<ul id="deptTree" class="ztree"></ul>
+								<form role="form">
+									<div class="row">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>模块类型</label>
+												<select class="form-control">
+													<option></option>
+													<option>案件类型</option>
+													<option>检材类型</option>
+													<option>专项行动</option>
+												</select>
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>名称</label>
+												<input type="text" class="form-control" placeholder="支持模糊查询" />
+											</div>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-6">
+											<button type="button" class="btn btn-primary">查询</button>
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<i class="fa fa-code-fork fa-fw"></i>模块一览
+							</div>
+							<div class="panel-body">
+									<div class="table-toolbar">
+										<button class="btn btn-primary" data-toggle="modal" data-target="#createCodeModal"><i class="fa fa-plus"></i>添加</button>
+										<button class="btn btn-default"><i class="fa fa-trash"></i>删除</button>
+									</div>
+									<table class="table table-striped table-bordered table-hover">
+										<thead>
+											<tr>
+												<th class="selection-col">&nbsp;</th>
+												<th>模块编码</th>
+												<th>模块类型</th>
+												<th>模块名</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td class="selection-col"><input type="checkbox" /></td>
+												<td><a href="#" data-toggle="modal" data-target="#updateCodeModal">000001</a></td>
+												<td>案件类型</td>
+												<td>AAAAAA</td>
+											</tr>
+											<tr>
+												<td class="selection-col"><input type="checkbox" /></td>
+												<td><a href="#" data-toggle="modal" data-target="#updateCodeModal">000002</a></td>
+												<td>案件类型</td>
+												<td>BBBBBB</td>
+											</tr>
+											<tr>
+												<td class="selection-col"><input type="checkbox" /></td>
+												<td><a href="#" data-toggle="modal" data-target="#updateCodeModal">000003</a></td>
+												<td>案件类型</td>
+												<td>CCCCCC</td>
+											</tr>
+											<tr>
+												<td class="selection-col"><input type="checkbox" /></td>
+												<td><a href="#" data-toggle="modal" data-target="#updateCodeModal">000004</a></td>
+												<td>检材类型</td>
+												<td>DDDDDD</td>
+											</tr>
+											<tr>
+												<td class="selection-col"><input type="checkbox" /></td>
+												<td><a href="#" data-toggle="modal" data-target="#updateCodeModal">000005</a></td>
+												<td>专项行动</td>
+												<td>EEEEEE</td>
+											</tr>
+											<tr>
+												<td class="selection-col"><input type="checkbox" /></td>
+												<td><a href="#" data-toggle="modal" data-target="#updateCodeModal">000006</a></td>
+												<td>检材类型</td>
+												<td>FFFFFF</td>
+											</tr>
+											<tr>
+												<td class="selection-col"><input type="checkbox" /></td>
+												<td><a href="#" data-toggle="modal" data-target="#updateCodeModal">000007</a></td>
+												<td>专项行动</td>
+												<td>HHHHHH</td>
+											</tr>
+										</tbody>
+									</table>
 							</div>
 						</div>
 					</div>
@@ -135,8 +221,8 @@
 			</div>
 		</div>
 		
-		<!-- update user -->
-		<div class="modal fade" id="addDeptModal" tabindex="-1" role="dialog" aria-labelledby="addDeptModalLabel" aria-hidden="true">
+		<!-- create code -->
+		<div class="modal fade" id="createCodeModal" tabindex="-1" role="dialog" aria-labelledby="createCodeModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -144,18 +230,58 @@
 							<span class="fa fa-times"></span>
 						</button>
 						<h4 class="modal-title" id="myModalLabel">
-							添加组织
+							添加模块
 						</h4>
 					</div>
 					<div class="modal-body">
 						<form role="form">
 							<div class="form-group">
-								<label for="parentDept">父组织</label>
-								<input type="text" class="form-control" id="parentDept" value="蜀山区公安局" readonly />
+								<label for="codeType">模块类型</label>
+								<select class="form-control">
+									<option>案件类型</option>
+									<option>检材类型</option>
+									<option>专项行动</option>
+								</select>
 							</div>
 							<div class="form-group">
-								<label for="deptName">组织名</label>
-								<input type="text" class="form-control" id="deptName" placeholder="请输入组织名" />
+								<label for="codeName">模块名称</label>
+								<input type="text" class="form-control" id="codeName" placeholder="模块名称">
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+						<button type="button" class="btn btn-primary" data-dismiss="modal">保存</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal -->
+		</div>
+		
+		<!-- update code -->
+		<div class="modal fade" id="updateCodeModal" tabindex="-1" role="dialog" aria-labelledby="updateCodeModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+							<span class="fa fa-times"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">
+							更新模块
+						</h4>
+					</div>
+					<div class="modal-body">
+						<form role="form">
+							<div class="form-group">
+								<label for="codeType">模块类型</label>
+								<select class="form-control">
+									<option>案件类型</option>
+									<option selected>检材类型</option>
+									<option>专项行动</option>
+								</select>
+							</div>
+							<div class="form-group">
+								<label for="codeName">模块名称</label>
+								<input type="text" class="form-control" id="codeName" placeholder="模块名称" value="FFFFFF" />
 							</div>
 						</form>
 					</div>
@@ -185,20 +311,15 @@
         <script src="../js/flot/jquery.flot.pie.js"></script>
         <script src="../js/flot/jquery.flot.resize.js"></script>
         <script src="../js/flot/jquery.flot.tooltip.min.js"></script>
-		
-		<!-- zTree -->
-		<script src="../js/zTree_v3/js/jquery.ztree.core.js"></script>
-		<script src="../js/zTree_v3/js/jquery.ztree.excheck.js"></script>
-		<script src="../js/zTree_v3/js/jquery.ztree.exedit.js"></script>
         
-        <script src="../scripts/departments.js"></script>
+        <script src="../scripts/statistics.js"></script>
 
         <!-- Custom Theme JavaScript -->
         <script src="../js/startmin.js"></script>
 		
 		<script>
 			$(function() {
-				$.poa.dept.init();
+				$.poa.statistics.init();
 			});
 		</script>
 	</body>
