--- a/static/pages/users.html
+++ b/static/pages/users.html
@@ -76,9 +76,6 @@
                             <li>
                                 <a href="index.html"><i class="fa fa-dashboard fa-fw"></i>首页</a>
                             </li>
-                            <!--<li>
-                            	<a href="material.html"><i class="fa fa-file-archive-o fa-fw"></i>委托材料管理</a>
-                            </li>-->
                             <li>
                                 <a href="#"><i class="fa fa-table fa-fw"></i>证物检验鉴定申请<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
@@ -96,6 +93,9 @@
                             <li>
                                 <a href="users.html" class="active"><i class="fa fa-user fa-fw"></i>用户管理</a>
                             </li>
+							<li>
+								<a href="codes.html"><i class="fa fa-code-fork fa-fw"></i>模块管理</a>
+							</li>
                             <li>
                                 <a href="statistics.html"><i class="fa fa-bar-chart fa-fw"></i>统计分析</a>
                             </li>
